# codebase-flattener

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  package.json
src/: main.rs
