[package]
name = "codebase-flattener"
version = "0.1.0"
authors = ["Krystian Mikołajczyk"]
edition = "2021"
description = "Flatten a Rust (or any) codebase into one file for LLM ingestion."
license = "MIT"
readme = "README.md"
repository = "https://github.com/szczuroskoczek/codebase-flattener"
homepage = "https://github.com/szczuroskoczek/codebase-flattener"
keywords = ["cli", "codebase", "llm", "flatten"]
categories = ["development-tools", "command-line-utilities"]

[package.metadata.deb]
maintainer = "Krystiann Mikołajczyk"
depends = "libc6 (>= 2.28)"
section = "utility"
priority = "optional"
assets = [
    [
        "target/release/codebase-flattener",
        "usr/bin/codebase-flattener",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/codebase-flattener/README.md",
        "644",
    ],
    [
        "LICENSE",
        "usr/share/doc/codebase-flattener/LICENSE",
        "644",
    ],
]

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
